# ContextForge

./: .gitignore  CLAUDE.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  pyproject.toml
docs/: DEVPLAN.md  PYPI.md
src/ctxforge/: __init__.py  __main__.py  exceptions.py
src/ctxforge/analysis/: cli_detector.py  doc_detector.py  lang_detector.py  scanner.py
src/ctxforge/console/: application.py
src/ctxforge/console/commands/: clean.py  ctx.py  init.py  profile.py  run.py  tool.py
src/ctxforge/core/: injection.py  migration.py  profile.py  project.py  prompt_builder.py  registry.py  toolchain.py
src/ctxforge/llm/: __init__.py  cli_fallback.py  client.py  provider.py
src/ctxforge/runner/: base.py  claude.py  codex.py  registry.py
src/ctxforge/spec/: loader.py  schema.py
src/ctxforge/storage/: commands_writer.py  profile_writer.py  project_writer.py
tests/: conftest.py
tests/analysis/: test_doc_detector.py  test_lang_detector.py  test_scanner.py
tests/console/: test_commands.py  test_ctx.py
tests/core/: test_injection.py  test_migration.py  test_profile.py  test_project.py  test_prompt_builder.py
tests/llm/: test_cli_fallback.py  test_client.py  test_provider.py
tests/runner/: test_claude.py  test_codex.py  test_registry.py
tests/spec/: test_loader.py  test_schema.py
tests/storage/: test_commands_writer.py  test_profile_writer.py  test_project_writer.py
