[project]
name = "ctxforge"
version = "0.2.0"
description = "AI role-matrix context manager — define AI profiles and inject context into any AI CLI."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["ai", "context", "cli", "developer-tools", "llm"]
authors = [
    { name = "lijihangmk2" },
]
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.0",
    "tomli-w>=1.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "questionary>=2.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
google = ["google-generativeai>=0.8"]
all-llm = ["openai>=1.0", "anthropic>=0.40", "google-generativeai>=0.8"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
ctxforge = "ctxforge.console.application:main"

[project.urls]
Homepage = "https://github.com/lijihangmk2/ContextForge"
Repository = "https://github.com/lijihangmk2/ContextForge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxforge"]

# --- Poetry dev config (optional, only for contributors using poetry) ---
[tool.poetry]
name = "ctxforge"
version = "0.2.0"
description = "dev-only"
authors = ["lijihangmk2"]
packages = [{include = "ctxforge", from = "src"}]

[tool.poetry.scripts]
ctxforge = "ctxforge.console.application:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = ">=0.15.0"
pydantic = ">=2.0"
tomli-w = ">=1.0"
rich = ">=13.0"
jinja2 = ">=3.1"
questionary = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.8"
mypy = ">=1.13"

# --- Tool configs ---
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
